refactor: zera as violações do Checkstyle em core, ai, defense, memory e desktop
Divide as classes acima dos tetos do §5 por responsabilidade, sem supressão
e sem mexer nos limites:

- core: VoiceService, TurnManager, AutomationEngine, WorkflowEngine,
  McpManager, SkillRuntime, TaskRunner, ZordonCore e demais viram fachadas
  com colaboradores de pacote; listas longas de parâmetros viram records.
- ai: provedores Anthropic e OpenAI-compatível divididos em troca, fluxo,
  retentativa e montagem de mensagens.
- defense: HostWatch com Config e as varreduras em classes próprias.
- desktop: DesktopState e ShellActions agrupados por área
  (state.security(), actions.data()...); ZordonDesktop fica com o ciclo de
  vida, e ações, sessão e eventos ganham classes próprias; telas grandes
  divididas mantendo ids e classes de estilo.

Restaura o que a refatoração paralela tinha removido ou quebrado: anotações
@Spec, logs, comentários e as ações de voz abstratas.

verifyAll verde: Checkstyle e Spotless nos 9 módulos, 583 testes.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>